--- a/Training-Support.html
+++ b/Training-Support.html
@@ -117,7 +117,7 @@
 									</header>
 									<p>from £750</p>
 									<p>If your organisation is considering migrating to ExpensePlus, the idea of switching to a new system may feel a bit daunting.</p>
-									<p>To help ease the transition, I offer a custom support and training package specifically for churches and charities who would appreciate more in-depth assistance in moving to ExpensePlus as quickly and efficiently as possible.</p></br>				
+									<p>To help ease the transition, I offer a custom support and training package specifically for charities who would appreciate more in-depth assistance in moving to ExpensePlus as quickly and efficiently as possible.</p></br>				
 									<a class="button" href="#popup2">More Info</a>
 																
 									<div id="popup2" class="overlay">
@@ -126,7 +126,7 @@
 											<a class="close" href="#">&times;</a>
 											<div class="content">
 												<p>We will start with a free, no-obligation consultation via Zoom. This will enable me to learn more about you, your organisation, and your current accounting setup in greater depth.</p> 
-									<p>Each organisation's migration to ExpensePlus is unique, so the fees I charge vary from the basic package price of £750, depending on your organisation's income. This is particularly true if your accounts require significantly more work than usual before they can be transferred to ExpensePlus. However, if I think your accounts are simple to migrate or you are a very small organisation (income less than £10K), I may be able to offer a rate lower than the base price.</p>
+									<p>Each organisation's migration to ExpensePlus is unique, so the fees I charge vary from the basic package price of £750, depending on your organisation's income. In addition, if your accounts require significantly more work than usual before they can be transferred to ExpensePlus, the package price could increase. However, if I think your accounts are simple to migrate or you are a very small organisation (income less than £10K), I may be able to offer a rate lower than the base price.</p>
 									<section id="Reviews" style="margin-top:-200px; margin-bottom: 250px"></section>
 					
 						<div class="inner">
